// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [app.cancel.escape] 1`] = `
{
  "sequence": [
    "app.cancel.escape",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [debug.enable] 1`] = `
{
  "sequence": [
    "debug.enable",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [demo.render-concurrency] 1`] = `
{
  "sequence": [
    "demo.render-concurrency",
  ],
  "snap": {
    "containers": 2,
    "dxErrors": 0,
    "edges": 8,
    "focused": "node:e8",
    "nodes": 8,
    "scale": 0.8,
    "selected": "node:e8",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [demo.render-java] 1`] = `
{
  "sequence": [
    "demo.render-java",
  ],
  "snap": {
    "containers": 3,
    "dxErrors": 0,
    "edges": 9,
    "focused": "node:e9",
    "nodes": 9,
    "scale": 0.6,
    "selected": "node:e9",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [demo.render-jira] 1`] = `
{
  "sequence": [
    "demo.render-jira",
  ],
  "snap": {
    "containers": 1,
    "dxErrors": 0,
    "edges": 3,
    "focused": "node:e4",
    "nodes": 4,
    "scale": 2,
    "selected": "node:e4",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [demo.render-self] 1`] = `
{
  "sequence": [
    "demo.render-self",
  ],
  "snap": {
    "containers": 5,
    "dxErrors": 0,
    "edges": 77,
    "focused": "node:e51",
    "nodes": 51,
    "scale": 0.17,
    "selected": "node:e51",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [detail.less] 1`] = `
{
  "sequence": [
    "detail.less",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 0.83,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [detail.more] 1`] = `
{
  "sequence": [
    "detail.more",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1.2,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [editing.container.create] 1`] = `
{
  "sequence": [
    "editing.container.create",
  ],
  "snap": {
    "containers": 1,
    "dxErrors": 0,
    "edges": 0,
    "focused": "container:c1",
    "nodes": 0,
    "scale": 1,
    "selected": "container:c1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [editing.node.create] 1`] = `
{
  "sequence": [
    "editing.node.create",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": "node:e1",
    "nodes": 1,
    "scale": 1,
    "selected": "node:e1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [graph.create] 1`] = `
{
  "sequence": [
    "graph.create",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [graph.export.json] 1`] = `
{
  "sequence": [
    "graph.export.json",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [graph.switch.next] 1`] = `
{
  "sequence": [
    "graph.switch.next",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [help.open] 1`] = `
{
  "sequence": [
    "help.open",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [layout.apply.grid] 1`] = `
{
  "sequence": [
    "layout.apply.grid",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [layout.apply.radial] 1`] = `
{
  "sequence": [
    "layout.apply.radial",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [layout.apply.tidy] 1`] = `
{
  "sequence": [
    "layout.apply.tidy",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [modal.close] 1`] = `
{
  "sequence": [
    "modal.close",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [palette.open] 1`] = `
{
  "sequence": [
    "palette.open",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.demo.imageSearch] 1`] = `
{
  "sequence": [
    "systemDesign.demo.imageSearch",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 15,
    "focused": null,
    "nodes": 15,
    "scale": 0.43,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.edge.async] 1`] = `
{
  "sequence": [
    "systemDesign.edge.async",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.edge.read] 1`] = `
{
  "sequence": [
    "systemDesign.edge.read",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.edge.sync] 1`] = `
{
  "sequence": [
    "systemDesign.edge.sync",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.edge.write] 1`] = `
{
  "sequence": [
    "systemDesign.edge.write",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.node.database] 1`] = `
{
  "sequence": [
    "systemDesign.node.database",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": "node:e1",
    "nodes": 1,
    "scale": 1,
    "selected": "node:e1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.node.gateway] 1`] = `
{
  "sequence": [
    "systemDesign.node.gateway",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": "node:e1",
    "nodes": 1,
    "scale": 1,
    "selected": "node:e1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.node.index] 1`] = `
{
  "sequence": [
    "systemDesign.node.index",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": "node:e1",
    "nodes": 1,
    "scale": 1,
    "selected": "node:e1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.node.kafka] 1`] = `
{
  "sequence": [
    "systemDesign.node.kafka",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": "node:e1",
    "nodes": 1,
    "scale": 1,
    "selected": "node:e1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.node.service] 1`] = `
{
  "sequence": [
    "systemDesign.node.service",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": "node:e1",
    "nodes": 1,
    "scale": 1,
    "selected": "node:e1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.node.user-input] 1`] = `
{
  "sequence": [
    "systemDesign.node.user-input",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": "node:e1",
    "nodes": 1,
    "scale": 1,
    "selected": "node:e1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [systemDesign.share.copy] 1`] = `
{
  "sequence": [
    "systemDesign.share.copy",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [theme.toggle] 1`] = `
{
  "sequence": [
    "theme.toggle",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.fit.all] 1`] = `
{
  "sequence": [
    "view.fit.all",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.left.toggle] 1`] = `
{
  "sequence": [
    "view.left.toggle",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.top.toggle] 1`] = `
{
  "sequence": [
    "view.top.toggle",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.zen] 1`] = `
{
  "sequence": [
    "view.zen",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.zoom.in] 1`] = `
{
  "sequence": [
    "view.zoom.in",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1.2,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.zoom.out] 1`] = `
{
  "sequence": [
    "view.zoom.out",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 0.83,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.zoom.reset] 1`] = `
{
  "sequence": [
    "view.zoom.reset",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;
